# wasm-error-diffusion-dither-comparison

./: .gitignore  Dockerfile  README.md  asconfig.json  index.html  license.txt  makefile  package-lock.json  package.json  vite.config.js  webpack.config.js
public/: index.html
public/assets/: cpp.wasm  d.wasm  rust.wasm  zig.wasm
sass/: _bootstrap.scss  style.scss
src/: dither-model.js  index.js  message-headers.js
src/components/: app.vue
src/dither/: dither.js
src/dom/: canvas.js  dither-dropdown-model.js
src/worker/: dither.js  ditherWasm.js  wasm.js  worker.js
wasm/asc/: index.ts
wasm/cpp/: main.cpp
wasm/d/: main.d
wasm/rust/: Cargo.toml
wasm/rust/src/: lib.rs
wasm/zig/: main.zig
