[package]
name = "dither"
version = "0.1.0"
edition = "2021"
description = "Error propagation dither"
license-file = "../../license.txt"
repository = "https://github.com/allen-garvey/wasm-error-propagation-dither-comparison"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.80"
